--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <!-- Customize your theme here. -->
         <item name="android:editTextBackground">@drawable/rn_edit_text_material</item>
         
-          <item name="android:windowBackground">#f6fbff</item>
+          <item name="android:windowBackground">@drawable/splash.png</item>
     </style>
 
 </resources>
