--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -5,7 +5,13 @@
         <!-- Customize your theme here. -->
         <item name="android:editTextBackground">@drawable/rn_edit_text_material</item>
         
-          <item name="android:windowBackground">@drawable/splash.png</item>
+          <item name="android:windowBackground">@drawable/splash</item>
+    </style>
+      <style name="SplashTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <!-- Customize your theme here. -->
+       
+        
+          <item name="android:windowBackground">@drawable/splash_screen</item>
     </style>
 
 </resources>
